--- a/index.html
+++ b/index.html
@@ -17,20 +17,23 @@
       id="box"
       class="ffb sm:w-4/6 md:w-3/6 lg:w-2/6 p-8 bg-slate-500 flex justify-between items-center flex-col mx-auto relative top-0.5 rounded-md border-blue-900 border-2"
     >
-      <h1 id="msg" class="p-3 text-center capitalize text-4xl mb-5 text-white font-mono">
+      <h1
+        id="msg"
+        class="p-3 text-center capitalize text-4xl mb-5 text-white font-mono"
+      >
         Bienvenue !!!
       </h1>
       <p id="msg1" class="mb-8 font-mono text-white">
         faite la connaissance des pays du monde
       </p>
       <!-- <form> -->
-        <button
-          id="btn"
-          type="submit"
-          class="w-full bg-slate-500 border-2 border-gray-700 p-2 rounded-md pl-3 pr-3 inline-block text-center font-mono text-white hover:bg-slate-700"
-        >
-          Allez...
-        </button>
+      <button
+        id="btn"
+        type="submit"
+        class="w-full bg-slate-500 border-2 border-gray-700 p-2 rounded-md pl-3 pr-3 inline-block text-center font-mono text-white hover:bg-slate-700"
+      >
+        Allez...
+      </button>
       <!-- </form> -->
     </div>
     <footer
