--- a/home.html
+++ b/home.html
@@ -13,13 +13,13 @@
   <body class="bg-headerbg">
     <!-- The header of the page. -->
 
-    <header id="idi" class="w-full h-1/3 p-5 bg-slate-600">
+    <header id="head" class="w-full h-1/3 p-5 bg-slate-600 -top-56 relative">
       <nav class="w-10/12 mx-auto h-full flex justify-between">
         <h1 class="text-5xl text-white font-mono sm:float-left">
           <a href="/">Atlas viewer</a>
         </h1>
         <ul
-          class="w-1/5 flex justify-between p-5 font-mono text-white md:hidden sm:hidden"
+          class="w-1/5 flex justify-between p-5 font-mono text-white md:block sm:hidden"
         >
           <li class="underline"><a href="#">Documentation</a></li>
           <li class="underline"><a href="#">About</a></li>
@@ -27,23 +27,24 @@
       </nav>
     </header>
     <!-- The main section of the page. -->
-    <main class="w-full flex flex-col justify-between mt-5">
+    <main class="w-full flex flex-col justify-between mt-5 items-center">
       <!-- The main section of the page. -->
 
-      <section class="w-3/5 mx-auto mt-5 flex justify-center items-center">
+      <section class="w-3/6 mx-auto mt-5">
+        <form id ="cs" class="w-full opacity-0 flex justify-around items-center">
         <label for="countryName" class="text-blue-900 p-5 mt-1 font-mono"
           >Saisissez le nom du pays</label
         >
-        <form>
           <input
             id="country"
+            required
             type="text"
             placeholder="Haiti"
             class="w-2/5 border p-2 rounded-md focus:border-blue-900 font-mono"
           />
           <button
             type="submit"
-            class="bg-blue-500 border-1 hover:bg-blue-700 border-gray-700 p-2 rounded-md pl-3 pr-3 inline-block text-center font-mono"
+            class="bg-blue-500 border-1 hover:bg-blue-700 border-gray-700 p-2 rounded-md pl-3 pr-3 inline-block text-center font-mono "
           >
             Rechercher
           </button>
@@ -280,19 +281,23 @@
           </div>
         </div>
       </section>
+      <div id="loader-container" class="w-2/4 mx-auto mt-20 mb-32 hidden justify-center items-center flex-col">
+        <div id="loader" class="w-2*50 h-2*50 border-8 rounded-full mx-auto border-x-slate-600 border-y-slate-200 animate-ping rotate-180" >
+          <div class="w-2*48 h-2*48 border-8 rounded-full mx-auto border-x-slate-200 border-y-slate-600 animate-ping -rotate-180"></div>
+        </div>
+      </div>
       <div
         id="err"
-        class="w-3/6 mx-auto p-5 mt-10 mb-20 bg-slate-600 text-center rounded-md hidden"
+        class="w-3/6 mx-auto p-5 mt-10 mb-24 bg-slate-600 text-center rounded-md hidden"
       >
         <p class="font-mono mt-10 p-10 text-white">
           Sorry, we couldn't find any information for that country.
         </p>
       </div>
-      "
     </main>
     <footer
       id="ff"
-      class="w-full h-28 mt-10 border-t-2 border-dotted bg-slate-600 flex flex-col justify-center items-center absolute bottom-0"
+      class="w-full h-28 mt-12 border-t-2 border-dotted bg-slate-600 flex flex-col justify-center items-center absolute -bottom-28"
     >
       <div class="w-3/4 mx-auto">
         <p class="text-sm text-white text-center">
@@ -301,5 +306,6 @@
       </div>
     </footer>
     <script src="/scriptjs/js.js"></script>
+    <script src="/scriptjs/design.js"></script>
   </body>
 </html>
