--- a/home.html
+++ b/home.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/dist/styles.css" />
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="node_modules/animejs/lib/anime.min.js"></script>
-
+ <script src="https://cdn.jsdelivr.net/npm/animejs"></script>
     <title>Atlas viewer</title>
   </head>
   <body class="bg-headerbg">
