--- a/home.html
+++ b/home.html
@@ -7,31 +7,43 @@
     <link rel="stylesheet" href="/dist/styles.css" />
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="node_modules/animejs/lib/anime.min.js"></script>
- <script src="https://cdn.jsdelivr.net/npm/animejs"></script>
+
     <title>Atlas viewer</title>
   </head>
   <body class="bg-headerbg">
     <!-- The header of the page. -->
 
     <header id="head" class="w-full h-1/3 p-5 bg-slate-600 -top-56 relative">
-      <nav class="w-10/12 mx-auto h-full flex justify-between">
+      <nav class=" max-sm:w-full md:w-10/12 mx-auto h-full flex justify-between">
         <h1 class="text-5xl text-white font-mono sm:float-left">
           <a href="/">Atlas viewer</a>
         </h1>
         <ul
-          class="w-1/5 flex justify-between p-5 font-mono text-white md:block sm:hidden"
+          class="w-1/5 flex justify-between p-5 font-mono text-white max-sm:hidden"
         >
           <li class="underline"><a href="#">Documentation</a></li>
           <li class="underline"><a href="#">About</a></li>
         </ul>
+        <ul class="w-10 h-10 hidden  flex-col float-right mr-5">
+          <li>
+            <span class="w-full border-2 border-black "></span>
+          </li>
+          <li>
+            <span class="w-full border-2 border-black"></span>
+          </li>
+          <li>
+            <span class="w-full border-2 border-black"></span>
+          </li>
+        </ul>
+        
       </nav>
     </header>
     <!-- The main section of the page. -->
     <main class="w-full flex flex-col justify-between mt-5 items-center">
       <!-- The main section of the page. -->
 
-      <section class="w-3/6 mx-auto mt-5">
-        <form id ="cs" class="w-full opacity-0 flex justify-around items-center">
+      <section class="max-sm:w-full w-3/6 mx-auto mt-5">
+        <form id ="cs" class="w-full opacity-0 flex max-sm:flex-col  justify-around items-center">
         <label for="countryName" class="text-blue-900 p-5 mt-1 font-mono"
           >Saisissez le nom du pays</label
         >
@@ -44,7 +56,7 @@
           />
           <button
             type="submit"
-            class="bg-blue-500 border-1 hover:bg-blue-700 border-gray-700 p-2 rounded-md pl-3 pr-3 inline-block text-center font-mono "
+            class="bg-blue-500 border-1 hover:bg-blue-700 max-sm:w-2/5 max-sm:mt-3 border-gray-700 p-2 rounded-md pl-3 pr-3 inline-block text-center font-mono "
           >
             Rechercher
           </button>
@@ -52,7 +64,7 @@
       </section>
       <section
         id="result"
-        class="w-11/12 mx-auto mt-5 p-8 rounded-lg bg-gray-100 hidden"
+        class="max-sm:w-full w-11/12 mx-auto mt-5 p-8 rounded-lg bg-gray-100 hidden"
       >
         <div class="w-full text-center mt-5 h-10">
           <p class="text-center text-2xl font-bold text-blue-900">
@@ -288,7 +300,7 @@
       </div>
       <div
         id="err"
-        class="w-3/6 mx-auto p-5 mt-10 mb-24 bg-slate-600 text-center rounded-md hidden"
+        class="max-sm:w-5/6 md:w-8/12 lg:w-3/6 mx-auto p-5 mt-10 mb-24 bg-slate-600 text-center rounded-md hidden"
       >
         <p class="font-mono mt-10 p-10 text-white">
           Sorry, we couldn't find any information for that country.
