--- a/home.html
+++ b/home.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/dist/styles.css" />
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="node_modules/animejs/lib/anime.min.js"></script>
+    < script  src =" https://cdn.jsdelivr.net/npm/animejs " > </ script >
+<script src="node_modules/animejs/lib/anime.min.js"></script>
 
     <title>Atlas viewer</title>
   </head>
