--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
 
     <title>Atlas viewer</title>
   </head>
-  <body class="bg-headerbg">
+  <body class="bg-headerbg bg-no-repeat bg-cover bg-center">
     <!-- The header of the page. -->
 
     <header id="head" class="w-full h-1/3 p-5 bg-slate-600 -top-56 relative">
@@ -234,12 +234,12 @@
             >
               Indicateurs économiques et sociaux
             </h2>
-            <ul class="w-11/12 mx-auto p-3">
-              gini : coefficient de Gini pour mesurer l'inégalité des revenus
-              dans le pays landlocked : si le pays est enclavé ou non car :
-              informations sur la circulation routière dans le pays postalCode :
-              format et expression régulière pour les codes postaux dans le pays
-            </ul>
+           <table class="w-full p-3">
+            <tr>
+              <td>Gini</td>
+              <td><span id="gini"></span></td>
+            </tr>
+           </table>
           </div>
           <div
             class="boite border-2 rounded-md w-3*100 p-3 my-3 text-white bg-slate-800 shadow-slate-500 shadow-md"
