--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
     <title>Atlas viewer</title>
   </head>
 
-  <body class="w-full h-full bg-headerbg">
+  <body
+    class="sm:w-screen sm:h-screen bg-headerbg bg-no-repeat bg-cover bg-center"
+  >
     <div
       id="box"
-      class="ffb sm:w-4/6 md:w-3/6 lg:w-2/6 p-8 bg-slate-500 flex justify-between items-center flex-col mx-auto relative top-0.5 rounded-md border-blue-900 border-2"
+      class="ffb sm:w-4/6 md:w-3/6 lg:w-2/6 p-8 bg-slate-500 flex justify-between items-center flex-col mx-auto relative top-0.5 rounded-md border-blue-900 border-2 z-auto overflow-hidden"
     >
       <h1
         id="msg"
@@ -36,15 +38,15 @@
       </button>
       <!-- </form> -->
     </div>
-    <footer
-      class="w-full h-28 mt-96 border-t-2 border-dotted bg-slate-600 flex flex-col justify-center items-center"
-    >
-      <div class="w-3/4 mx-auto">
-        <p class="text-sm text-white text-center">
-          Tout droit reservee <strong>2023</strong>
-        </p>
-      </div>
-    </footer>
-    <script src="scriptjs/design.js"></script>
   </body>
+  <footer
+    class="w-full h-28 mt-96 border-t-2 border-dotted bg-slate-600 flex flex-col justify-center items-center"
+  >
+    <div class="w-3/4 mx-auto">
+      <p class="text-sm text-white text-center">
+        Tout droit reservee <strong>2023</strong>
+      </p>
+    </div>
+  </footer>
+  <script src="scriptjs/design.js"></script>
 </html>
