--- a/home.html
+++ b/home.html
@@ -132,7 +132,7 @@
                 <td><span id="borders"></span></td>
               </tr>
               <tr>
-                <td>Populationd></td>
+                <td>Population</td>
                 <td><span id="population"></span></td>
               </tr>
             </table>
